force-app/main/default/objects/OpportunityLineItem/fields/Dias_Hombre__c.field-meta.xml
<CustomField>
    <fullName>Dias_Hombre__c</fullName>
    <label>Dias Hombre</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>