force-app/main/default/objects/OpportunityLineItem/fields/Familia__c.field-meta.xml
<CustomField>
    <fullName>Familia__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Familia</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <filterItems>
            <field>Product2.Family</field>
            <operation>equals</operation>
            <value>FISA System</value>
        </filterItems>
        <filterItems>
            <field>Product2.Family</field>
            <operation>equals</operation>
            <value>Omnia</value>
        </filterItems>
        <filterItems>
            <field>Product2.Family</field>
            <operation>equals</operation>
            <value>Fisa Credit Card</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Family</relationshipLabel>
    <relationshipName>Producto_de_oportunidad</relationshipName>
    <type>Lookup</type>
</CustomField>