force-app/main/default/objects/OpportunityLineItem/fields/Licencia_Recurrente__c.field-meta.xml
<CustomField>
    <fullName>Licencia_Recurrente__c</fullName>
    <label>Licencia Recurrente</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>