force-app/main/default/objects/OpportunityLineItem/fields/Serv_Customer_Care__c.field-meta.xml
<CustomField>
    <fullName>Serv_Customer_Care__c</fullName>
    <label>Serv Customer Care</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>