force-app/main/default/objects/OpportunityLineItem/fields/Servicio_Customer_Care__c.field-meta.xml
<CustomField>
    <fullName>Servicio_Customer_Care__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Servicio Customer Care</label>
    <type>Checkbox</type>
</CustomField>