force-app/main/default/objects/OpportunityLineItem/fields/Servicio_Profesional__c.field-meta.xml
<CustomField>
    <fullName>Servicio_Profesional__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Servicio Profesional</label>
    <type>Checkbox</type>
</CustomField>