force-app/main/default/objects/OpportunityLineItem/fields/Servicios_Profesionales__c.field-meta.xml
<CustomField>
    <fullName>Servicios_Profesionales__c</fullName>
    <label>Servicios Profesionales</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>