force-app/main/default/objects/OpportunityLineItem/fields/Tiene_Licencia_Recurrente__c.field-meta.xml
<CustomField>
    <fullName>Tiene_Licencia_Recurrente__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Licenciamiento</label>
    <type>Checkbox</type>
</CustomField>