force-app/main/default/objects/OpportunityLineItem/fields/Valor_de_Lista__c.field-meta.xml
<CustomField>
    <fullName>Valor_de_Lista__c</fullName>
    <description>Valor total del precio de lista de los productos seleccionados</description>
    <inlineHelpText>Valor total del precio de lista de los productos seleccionados</inlineHelpText>
    <label>Valor de Lista</label>
    <precision>15</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>